--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-hook-form": "5.6.2",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "validator": "^13.5.1"
   },
   "scripts": {
     "start": "react-scripts start",
